Updates to links

--- a/templates/forge.html
+++ b/templates/forge.html
@@ -10,6 +10,7 @@
 		</script>
 		<script src="https://hijackingprevention.com/static/js/send.js"></script>
 		<script src="https://hijackingprevention.com/dynamic/collect.js"></script>
+		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
 	</head>
 	<body>
 		<form method="POST">
