--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 			var sessionCookie = /sid=([\S]+)[;]*/g;
 			var hijackingPreventionSID = sessionCookie.exec(document.cookie)[1];
 		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://hijackingprevention.com/static/js/send.js"></script>
 		<script src="https://hijackingprevention.com/dynamic/collect.js"></script>
 		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
@@ -20,13 +21,13 @@
 				color: white;
 			}
 		</style>
-		<a href="/demo/post" class="navbtn">Post</a>&nbsp;<a href="/demo/login" class="navbtn">Login</a>&nbsp;<a href="/demo/signup" class="navbtn">Signup</a>
+		<a href="/demo/post" class="btn btn-default">Post</a>&nbsp;<a href="/demo/login" class="btn btn-default">Login</a>&nbsp;<a href="/demo/signup" class="btn btn-primary">Signup</a>
 		{% for p in posts %}
 		<section>
 			{% if p['poster'] == queryuser or not queryuser %}
 			<h2>{{ p['title'] }}</h2>
 			<a href="/u/{{ p['poster'] }}">{{ p['poster'] }}</a>
-			<p>{{ p['body'] }}</p>
+			<pre>{{ p['body'] }}</pre>
 			{% end %}
 		</section>
 		{% end %}
