--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,23 @@
 			var sessionCookie = /sid=([\S]+)[;]*/g;
 			var hijackingPreventionSID = sessionCookie.exec(document.cookie)[1];
 		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://hijackingprevention.com/static/js/send.js"></script>
 		<script src="https://hijackingprevention.com/dynamic/collect.js"></script>
 		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
 	</head>
 	<body>
+		<h1>Login</h1>
 		<form method="POST">
-			<input type="text" name="username"></input><br/>
-			<input type="password" name="password"></input>
-			<button>Login</button>
+			<div class="form-group">
+				<label for="username">Username:</label>
+				<input type="text" name="username" class="form-control" placeholder="Username" id="username"></input>
+			</div>
+			<div class="form-group">
+				<label for="password">Username:</label>
+				<input type="password" name="password" class="form-control" placeholder="Password" id="password"></input>
+			</div>
+			<button class="btn btn-primary">Login</button>
 		</form>
 	</body>
 </html>
