--- a/templates/post.html
+++ b/templates/post.html
@@ -7,15 +7,17 @@
 			var sessionCookie = /sid=([\S]+)[;]*/g;
 			var hijackingPreventionSID = sessionCookie.exec(document.cookie)[1];
 		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://hijackingprevention.com/static/js/send.js"></script>
 		<script src="https://hijackingprevention.com/dynamic/collect.js"></script>
 		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
 	</head>
 	<body>
+		<h1>Post</h1>
 		<form method="POST">
-			<input type="text" name="title"></input><br/>
-			<textarea name="body"></textarea><br/>
-			<button>Submit</button>
+			<input type="text" name="title" class="form-control" placeholder="Title"></input><br/>
+			<textarea name="body" class="form-control" placeholder="Body"></textarea><br/>
+			<button class="btn btn-success">Post</button>
 		</form>
 	</body>
 </html>
