--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,20 @@
 	</head>
 	<body>
 		<style>
-			.navbtn {
-				border:outset blue;
-				background: blue;
-				text-decoration: none;
-				color: white;
+			.pbody {
+				display: block;
+				white-space: pre;
 			}
 		</style>
-		<a href="/demo/post" class="btn btn-default">Post</a>&nbsp;<a href="/demo/login" class="btn btn-default">Login</a>&nbsp;<a href="/demo/signup" class="btn btn-primary">Signup</a>
+		<a href="/demo/post" class="btn btn-default">Post</a>&nbsp;<a href="/demo/login" class="btn btn-default">Login</a>&nbsp;<a href="/demo/signup" class="btn btn-primary">Signup</a><br/>
 		{% for p in posts %}
-		<section>
-			{% if p['poster'] == queryuser or not queryuser %}
-			<h2>{{ p['title'] }}</h2>
-			<a href="/u/{{ p['poster'] }}">{{ p['poster'] }}</a>
-			<pre>{{ p['body'] }}</pre>
+		<section class="panel panel-default">
+			<div class="panel-heading">
+				{% if p['poster'] == queryuser or not queryuser %}
+				<h2 class="panel-title">{{ p['title'] }}</h2>
+				<a href="/u/{{ p['poster'] }}">{{ p['poster'] }}</a>
+			</div>
+			<div class="panel-body pbody">{{ p['body'] }}</div>
 			{% end %}
 		</section>
 		{% end %}
